--- a/src/app/pages/application-management/application-atividade-detail/pdf/pedido-pdf/pedido-pdf.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/pdf/pedido-pdf/pedido-pdf.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="grid grid-cols-12 mb-4">
         <div class="col-span-6">
-            <span class="text-2xl font-bold mb-4 mr-4">Pedido de Inscrição</span>
+            <span class="text-2xl font-bold mb-4 mr-4">Pedido de Licença</span>
             <p-button icon="pi pi-file-pdf" size="large" [raised]="true" printSectionId="myDiv" [useExistingCss]="true"
                 ngxPrint />
         </div>
@@ -375,15 +375,6 @@
                             {{pedido.updatedAt | date: 'dd/MM/yyyy'}}
                         </span>
                     </label>
-                </div>
-                <div class="mt-20 text-center">
-                    <span class="with-image">
-                        <img src="images/stamp.png" alt="Stamp" class="stamp" width="110" height="110" />
-                        <span class="text-label text-gray-600">Donald Trump</span>
-                    </span>
-                    <div class="w-80 mx-auto border-t border-gray-400 pt-2">
-                        <p class="text-gray-800">Representante/<span class="italic">Reprezentante.</span></p>
-                    </div>
                 </div>
             </section>
 
