--- a/src/app/pages/application-management/application-cadastro-detail/certificate-pdf/certificate-pdf.component.html
+++ b/src/app/pages/application-management/application-cadastro-detail/certificate-pdf/certificate-pdf.component.html
@@ -3,8 +3,7 @@
     <div class="grid grid-cols-12 mb-4">
         <div class="col-span-6">
             <span class="text-2xl font-bold mb-4 mr-4">Certificado de Inscrição no Cadastro</span>
-            <p-button icon="pi pi-file-pdf" size="large" [raised]="true" printSectionId="myDiv" [useExistingCss]="true"
-                ngxPrint />
+            <p-button icon="pi pi-file-pdf" size="large" [raised]="true" (click)="generatePDF()" />
         </div>
         <div class="col-span-6 flex justify-end mb-4">
             <p-button (click)="goBack()" icon="pi pi-chevron-circle-left" label="Voltar" severity="help" size="large"
@@ -12,84 +11,78 @@
         </div>
     </div>
 
-    <div id="myDiv">
+    <div id="myDiv" class="px-16 pt-16 tracking-wider" [ngStyle]="getCategoriaStyle()">
         @if (certificadoData.pedidoInscricaoCadastro.aplicante.categoria === 'COMERCIAL') {
-        <div class="w-full mx-auto bg-white text-black p-2 rounded shadow-lg border relative mt-10"
-            style="border: 6px solid #db2828;">
+        <div class="text-black tracking-wider">
 
-            <div class="rounded max-h-screen" style="border: 6px solid #f5c60e;">
-                <!-- Header -->
-                <div class="relative z-10 text-center pt-6">
-                    <div class="flex justify-center mb-3">
-                        <img src="/images/rdtl.png" alt="Logo" class="h-16 w-16 object-contain" />
-                    </div>
-
-                    <div class="font-bold text-2xl uppercase">Ministério do Comércio e Indústria</div>
-                    <div class="font-semibold text-xl">Direção-Geral do Comércio</div>
-                    <div class="mt-4 font-extrabold text-5xl text-red tracking-wide">CERTIFICADO</div>
-                    <div class="text-lg font-semibold text-red">DE INSCRIÇÃO NO CADASTRO COMERCIAL</div>
+            <!-- Header -->
+            <div class="text-center pt-6">
+                <div class="flex justify-center mb-3">
+                    <img src="/images/rdtl.png" alt="Logo" class="h-24 w-24 object-contain" />
                 </div>
 
-                <!-- Certificate Body -->
-                <div class="mt-8 text-base p-6">
-                    <div class="mb-3 font-bold text-2xl">N.º <span class="font-normal">
-                            {{certificadoData.pedidoInscricaoCadastro.aplicante.numero}}
-                        </span></div>
-                    <p class="mb-6">
-                        Certifica-se que a Sociedade comercial <span class="font-semibold underline">
-                            {{certificadoData.pedidoInscricaoCadastro.nomeEmpresa}}
-                        </span>,
-                        titular de Registo Comercial n.º <span class="font-semibold underline">
-                            {{certificadoData.pedidoInscricaoCadastro.empresaNumeroRegistoComercial}}
-                        </span> e sede em
-                        <span class="font-semibold underline">
-                            {{certificadoData.sede.local}},
-                            {{certificadoData.sede.aldeia.nome}},
-                            {{certificadoData.sede.aldeia.suco.nome}},
-                            {{certificadoData.sede.aldeia.suco.postoAdministrativo.nome}},
-                            {{certificadoData.sede.aldeia.suco.postoAdministrativo.municipio.nome}}
-                        </span>,<br>
-                        está inscrita no sistema de registo do cadastro comercial junto da Direção-Geral do Comércio do
-                        Ministério
-                        do Comércio e Indústria, pelo exercício da atividade de
-                        <span class="font-semibold underline">
-                            {{certificadoData.pedidoInscricaoCadastro.classeAtividade.descricao}}
-                        </span>, nos termos do
-                        Decreto-Lei
-                        n.º
-                        90/2023, de 27 de dezembro.
-                    </p>
-                    <div class="mb-4">
-                        Validade até <span class="font-semibold">
-                            {{dataValido | date: 'dd/MM/yyyy'}}
-                        </span>
-                    </div>
-                    <div class="mb-6">
-                        Díli, <span class="font-semibold">
-                            {{certificadoData.createdAt | date: 'dd'}}
-                        </span> de <span class="font-semibold">
-                            {{certificadoData.createdAt | date: 'MMMM':'':'pt'}}
-                        </span> de <span class="font-semibold">
-                            {{certificadoData.createdAt | date: 'yyyy'}}
-                        </span>
-                    </div>
+                <div class="font-bold text-2xl uppercase">Ministério do Comércio e Indústria</div>
+                <div class="font-semibold text-xl">Direção-Geral do Comércio</div>
+                <div class="mt-4 font-extrabold text-5xl text-red tracking-wide">CERTIFICADO</div>
+                <div class="text-lg font-semibold text-red">DE INSCRIÇÃO NO CADASTRO COMERCIAL</div>
+            </div>
 
+            <!-- Certificate Body -->
+            <div class="mt-10 text-base p-8">
+                <div class="mb-3 font-bold text-3xl">N.º <span class="font-normal">
+                        {{certificadoData.pedidoInscricaoCadastro.aplicante.numero}}
+                    </span></div>
+                <p class="mb-6 mt-8">
+                    Certifica-se que a Sociedade comercial <span class="font-semibold underline">
+                        {{certificadoData.pedidoInscricaoCadastro.nomeEmpresa}}
+                    </span>,
+                    titular de Registo Comercial n.º <span class="font-semibold underline">
+                        {{certificadoData.pedidoInscricaoCadastro.empresaNumeroRegistoComercial}}
+                    </span> e sede em
+                    <span class="font-semibold underline">
+                        {{certificadoData.sede.local}},
+                        {{certificadoData.sede.aldeia.nome}},
+                        {{certificadoData.sede.aldeia.suco.nome}},
+                        {{certificadoData.sede.aldeia.suco.postoAdministrativo.nome}},
+                        {{certificadoData.sede.aldeia.suco.postoAdministrativo.municipio.nome}}
+                    </span>,<br>
+                    está inscrita no sistema de registo do cadastro comercial junto da Direção-Geral do Comércio do
+                    Ministério
+                    do Comércio e Indústria, pelo exercício da atividade de
+                    <span class="font-semibold underline">
+                        {{certificadoData.pedidoInscricaoCadastro.classeAtividade.descricao}}
+                    </span>, nos termos do
+                    Decreto-Lei
+                    n.º
+                    90/2023, de 27 de dezembro.
+                </p>
+                <div class="mb-4">
+                    Validade até <span class="font-semibold">
+                        {{dataValido | date: 'dd/MM/yyyy'}}
+                    </span>
                 </div>
-                <div class="flex items-center">
-                    <div class="flex-1 flex justify-center">
-                        <!-- Centered content -->
-                        <div>
-                            <div class="mt-8 mb-2 text-center">O Diretor-Geral do Comércio</div>
-                            <span class="with-image">
-                                <img src="images/stamp.png" alt="Stamp" class="stamp" width="110" height="110" />
-                                <span class="text-label text-gray-600">Donald Trump</span>
-                            </span>
-                        </div>
+                <div class="mb-6">
+                    Díli, <span class="font-semibold">
+                        {{certificadoData.createdAt | date: 'dd'}}
+                    </span> de <span class="font-semibold">
+                        {{certificadoData.createdAt | date: 'MMMM':'':'pt'}}
+                    </span> de <span class="font-semibold">
+                        {{certificadoData.createdAt | date: 'yyyy'}}
+                    </span>
+                </div>
+
+            </div>
+
+            <div class="grid grid-cols-4 mt-64">
+                <div class="col-span-3 flex items-center justify-center text-center">
+                    <div class="mb-2 text-black">
+                        <p>O Diretor-Geral do Comércio</p>
+                        <br>
+                        <p class="text-gray-600">Donald Trump</p>
                     </div>
-                    <div class="flex justify-end">
-                        <!-- Right-aligned content -->
-                        <img src="images/qrcode.png" alt="Qrcode" class="qrcode" width="110" height="110" />
-                    </div>
+                </div>
+                <div class="col-span-1">
+                    <img src="images/qrcode.png" alt="Qrcode" class="qrcode" width="110" height="110" />
                 </div>
             </div>
 
@@ -99,85 +92,77 @@
 
 
         @else {
-        <div class="max-w-2xl mx-auto bg-white text-black p-2 rounded shadow-lg border relative mt-10"
-            style="border: 6px solid #0769C0;">
-
-            <div class="rounded max-h-screen" style="border: 2px solid #076ac0b5;">
-                <!-- Header -->
-                <div class="relative z-10 text-center pt-6">
-                    <div class="flex justify-center mb-3">
-                        <img src="/images/rdtl.png" alt="Logo" class="h-16 w-16 object-contain" />
-                    </div>
-
-                    <div class="font-bold text-2xl uppercase">Ministério do Comércio e Indústria</div>
-                    <div class="font-semibold text-xl">Direção-Geral do Indústria</div>
-                    <div class="mt-4 font-extrabold text-5xl text-blue tracking-wide">CERTIFICADO</div>
-                    <div class="text-lg font-semibold text-blue">DE INSCRIÇÃO NO CADASTRO INDUSTRIAL</div>
+        <div class="text-black tracking-wider">
+            <!-- Header -->
+            <div class="relative z-10 text-center pt-6">
+                <div class="flex justify-center mb-3">
+                    <img src="/images/rdtl.png" alt="Logo" class="h-24 w-24 object-contain" />
                 </div>
 
-                <!-- Certificate Body -->
-                <div class="mt-8 text-base p-6">
-                    <div class="mb-6 font-bold text-4xl">N.º <span class="font-normal">
-                            {{certificadoData.pedidoInscricaoCadastro.aplicante.numero}}
-                        </span></div>
-                    <p class="mb-6">
-                        Certifica-se que a Sociedade comercial <span class="font-semibold underline">
-                            {{certificadoData.pedidoInscricaoCadastro.nomeEmpresa}}
-                        </span>,
-                        titular de Registo Comercial n.º <span class="font-semibold underline">
-                            {{certificadoData.pedidoInscricaoCadastro.empresaNumeroRegistoComercial}}
-                        </span> e sede em
-                        <span class="font-semibold underline">
-                            {{certificadoData.sede.local}},
-                            {{certificadoData.sede.aldeia.nome}},
-                            {{certificadoData.sede.aldeia.suco.nome}},
-                            {{certificadoData.sede.aldeia.suco.postoAdministrativo.nome}},
-                            {{certificadoData.sede.aldeia.suco.postoAdministrativo.municipio.nome}}
-                        </span>,<br>
-                        está inscrita no sistema de registo do cadastro comercial junto da Direção-Geral do Comércio do
-                        Ministério
-                        do Comércio e Indústria, pelo exercício da atividade de
-                        <span class="font-semibold underline">
-                            {{certificadoData.pedidoInscricaoCadastro.classeAtividade.descricao}}
-                        </span>, nos termos do Decreto-Lei
-                        n.º
-                        90/2023, de 27 de dezembro.
-                    </p>
-                    <div class="mb-4">
-                        Validade até <span class="font-semibold">
-                            {{dataValido | date: 'dd/MM/yyyy'}}
-                        </span>
-                    </div>
-                    <div class="mb-6">
-                        Díli, <span class="font-semibold">
-                            {{certificadoData.createdAt | date: 'dd'}}
-                        </span> de <span class="font-semibold">
-                            {{certificadoData.createdAt | date: 'MMMM':'':'pt'}}
-                        </span> de <span class="font-semibold">
-                            {{certificadoData.createdAt | date: 'yyyy'}}
-                        </span>
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <div class="flex-1 flex justify-center">
-                        <!-- Centered content -->
-                        <div>
-                            <div class="mt-8 mb-2 text-center">O Diretor-Geral da Indústria</div>
-                            <span class="with-image">
-                                <img src="images/stamp.png" alt="Stamp" class="stamp" width="110" height="110" />
-                                <span class="text-label text-gray-600">Donald Trump</span>
-                            </span>
-                        </div>
-                    </div>
-                    <div class="flex justify-end">
-                        <!-- Right-aligned content -->
-                        <img src="images/qrcode.png" alt="Qrcode" class="qrcode" width="110" height="110" />
-                    </div>
-                </div>
+                <div class="font-bold text-2xl uppercase">Ministério do Comércio e Indústria</div>
+                <div class="font-semibold text-xl">Direção-Geral do Indústria</div>
+                <div class="mt-8 font-extrabold text-5xl text-blue tracking-wide">CERTIFICADO</div>
+                <div class="text-lg font-semibold text-blue">DE INSCRIÇÃO NO CADASTRO INDUSTRIAL</div>
             </div>
 
-
+            <!-- Certificate Body -->
+            <div class="mt-10 text-base p-8">
+                <div class="mb-6 font-bold text-3xl">N.º <span class="font-normal">
+                        {{certificadoData.pedidoInscricaoCadastro.aplicante.numero}}
+                    </span></div>
+                <p class="mb-6 mt-8">
+                    Certifica-se que a Sociedade comercial <span class="font-semibold underline">
+                        {{certificadoData.pedidoInscricaoCadastro.nomeEmpresa}}
+                    </span>,
+                    titular de Registo Comercial n.º <span class="font-semibold underline">
+                        {{certificadoData.pedidoInscricaoCadastro.empresaNumeroRegistoComercial}}
+                    </span> e sede em
+                    <span class="font-semibold underline">
+                        {{certificadoData.sede.local}},
+                        {{certificadoData.sede.aldeia.nome}},
+                        {{certificadoData.sede.aldeia.suco.nome}},
+                        {{certificadoData.sede.aldeia.suco.postoAdministrativo.nome}},
+                        {{certificadoData.sede.aldeia.suco.postoAdministrativo.municipio.nome}}
+                    </span>,<br>
+                    está inscrita no sistema de registo do cadastro comercial junto da Direção-Geral do Comércio do
+                    Ministério
+                    do Comércio e Indústria, pelo exercício da atividade de
+                    <span class="font-semibold underline">
+                        {{certificadoData.pedidoInscricaoCadastro.classeAtividade.descricao}}
+                    </span>, nos termos do Decreto-Lei
+                    n.º
+                    90/2023, de 27 de dezembro.
+                </p>
+                <div class="mb-4">
+                    Validade até <span class="font-semibold">
+                        {{dataValido | date: 'dd/MM/yyyy'}}
+                    </span>
+                </div>
+                <div class="mb-6">
+                    Díli, <span class="font-semibold">
+                        {{certificadoData.createdAt | date: 'dd'}}
+                    </span> de <span class="font-semibold">
+                        {{certificadoData.createdAt | date: 'MMMM':'':'pt'}}
+                    </span> de <span class="font-semibold">
+                        {{certificadoData.createdAt | date: 'yyyy'}}
+                    </span>
+                </div>
+            </div>
+            <div class="grid grid-cols-4 mt-64">
+                <div class="col-span-3 flex items-center justify-center text-center">
+                    <div class="mb-2 text-black">
+                        <p>O Diretor-Geral da Indústria</p>
+                        <br>
+                        <p class="text-gray-600">Donald Trump</p>
+                    </div>
+                </div>
+                <div class="col-span-1">
+                    <img src="images/qrcode.png" alt="Qrcode" class="qrcode" width="110" height="110" />
+                </div>
+            </div>
         </div>
+
+
         }
 
 
