--- a/src/app/pages/empresa/empresa-list/empresa-list.component.html
+++ b/src/app/pages/empresa/empresa-list/empresa-list.component.html
@@ -53,7 +53,7 @@
                     {{empresa.sede.local}} - {{empresa.sede.aldeia.suco.postoAdministrativo.municipio.nome}}
                 </td>
                 <td>
-                    {{empresa.gerente}}
+                    {{empresa.gerente.nome}}
                 </td>
                 <td>
                     {{empresa.telefone}}
