--- a/src/app/pages/application-management/application-atividade-detail/application-atividade-detail.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/application-atividade-detail.component.html
@@ -3,7 +3,7 @@
         Candidatura para o Pedido de Licenca para Exercicio de Atividade {{aplicanteData.categoria | titlecase}}
     </span>
 
-    <p-stepper [value]="3" class="basis-[50rem]" [linear]="true">
+    <p-stepper [value]="1" class="basis-[50rem]" [linear]="true">
         <p-step-list>
             <p-step [value]="1">Detalho da Aplicação</p-step>
             @if (isSubmitted(aplicanteData)) {
@@ -367,12 +367,20 @@
                                         </div>
                                     </div>
                                     <div class="flex items-center space-x-4">
-                                        @if (aplicanteData.estado === 'REVISTO' || aplicanteData.estado === 'APROVADO')
-                                        {
+                                        @switch (aplicanteData.estado) {
+                                        @case ('REVISTO') {
+                                        <p-tag [value]="'REVISTO'" [severity]="'SUBMETIDO'" />
+
+                                        }
+                                        @case ('APROVADO') {
                                         <p-tag [value]="'REVISTO'" [severity]="'SUBMETIDO'" />
                                         }
-                                        @else {
-                                        <p-tag value="Em curso" [severity]="'info'" icon="pi pi-clock" />
+                                        @case ('SUBMETIDO') {
+                                        <p-tag [value]="'Em curso'" [severity]="'info'" icon="pi pi-clock" />
+                                        }
+                                        @case ('EM_CURSO') {
+                                        <p-tag value="Pendente" [severity]="'warn'" icon="pi pi-ban" />
+                                        }
                                         }
                                     </div>
                                 </div>
