--- a/src/app/pages/application-management/application-atividade-detail/pdf/certificado-atividade-pdf/certificado-atividade-pdf.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/pdf/certificado-atividade-pdf/certificado-atividade-pdf.component.html
@@ -2,9 +2,8 @@
 <div class="card">
     <div class="grid grid-cols-12 mb-4">
         <div class="col-span-6">
-            <span class="text-2xl font-bold mb-4 mr-4">Certificado de Inscrição no Cadastro</span>
-            <p-button icon="pi pi-file-pdf" size="large" [raised]="true" printSectionId="myDiv" [useExistingCss]="true"
-                ngxPrint />
+            <span class="text-2xl font-bold mb-4 mr-4">Alvara de Licença</span>
+            <p-button icon="pi pi-file-pdf" size="large" [raised]="true" (click)="generatePDF()" />
         </div>
         <div class="col-span-6 flex justify-end mb-4">
             <p-button (click)="goBack()" icon="pi pi-chevron-circle-left" label="Voltar" severity="help" size="large"
@@ -12,82 +11,81 @@
         </div>
     </div>
 
-    <div id="myDiv">
-        <div class="w-full h-full bg-white border-4 border-red-600 rounded p-2">
-            <div class="h-fit border-4 border-yellow-500 px-8">
-                <div class="flex justify-between p-8">
-                    <img src="/images/rdtl.png" alt="Logo" class="h-16 w-16 object-contain" />
-                    <img src="/images/rdtl.png" alt="Logo" class="h-16 w-16 object-contain" />
-                </div>
-                <div class="flex justify-center">
-                    <div class="text-center my-4">
-                        <div class="mt-4 font-extrabold text-5xl text-sky-600 tracking-wide">ALVARÁ DE LICENÇA</div>
-                        <div class="text-3xl font-semibold text-sky-600">
-                            PARA EXERCÍCIO DA ATIVIDADE
-                            {{certificadoData.pedidoLicencaAtividade.aplicante.categoria | titlecase}}
-                        </div>
-                    </div>
-                </div>
+    <div id="myDiv" class="px-16 pt-16 tracking-wider" [ngStyle]="getCategoriaStyle()">
+        <div class="relative z-10 text-center pt-6 text-black">
+            <div class="flex justify-center pt-4 mb-3">
+                <img src="/images/rdtl.png" alt="Logo" class="h-24 w-24 object-contain" />
+            </div>
 
-                <div class="grid grid-cols-6 text-black">
-                    <div class="col-span-6 text-xl my-4">
-                        N.º <span class="font-bold">{{certificadoData.pedidoLicencaAtividade.aplicante.numero}}</span>
-                    </div>
-                    <div class="col-span-6 text-xl my-4">
-                        Sociedade Comercial <span
-                            class="font-bold">{{certificadoData.pedidoLicencaAtividade.nomeEmpresa}}</span>
-                    </div>
-                    <div class="col-span-6 text-xl my-4">
-                        Nº Registo Comercial <span
-                            class="font-bold">{{certificadoData.pedidoLicencaAtividade.empresaNumeroRegistoComercial}}</span>
-                    </div>
-                    <div class="col-span-6 text-xl my-4">
-                        NIF: <span class="font-bold">{{certificadoData.pedidoLicencaAtividade.empresaNif}}</span>
-                    </div>
-                    <div class="col-span-6 text-xl my-4">
-                        Sede em: <span class="font-bold">
-                            {{certificadoData.sede.local}},
-                            {{certificadoData.sede.aldeia.nome}},
-                            {{certificadoData.sede.aldeia.suco.nome}},
-                            {{certificadoData.sede.aldeia.suco.postoAdministrativo.nome}},
-                            {{certificadoData.sede.aldeia.suco.postoAdministrativo.municipio.nome}}
-                        </span>
-                    </div>
-                    <div class="col-span-6 text-xl my-4">
-                        Nível de risco: <span class="font-bold">{{certificadoData.pedidoLicencaAtividade.risco}}</span>
-                    </div>
-                    <div class="col-span-3 text-xl my-4">
-                        Atividade comercial declarada <span
-                            class="font-bold">{{certificadoData.pedidoLicencaAtividade.tipoAtividade.descricao}}</span>
-                    </div>
-                    <div class="col-span-3 text-xl my-4">
-                        Código: <span
-                            class="font-bold">{{certificadoData.pedidoLicencaAtividade.tipoAtividade.codigo}}</span>
-                    </div>
-                    <div class="col-span-6 text-xl my-4">
-                        Data de Emissão: <span
-                            class="font-bold">{{certificadoData.dataEmissao| date:'dd MMMM yyyy': 'pt'}}</span>
-                    </div>
-                    <div class="col-span-6 text-xl my-4">
-                        Validade até <span class="font-bold">{{dataValido | date:'dd MMMM yyyy': 'pt'}}</span>
-                    </div>
+            <div class="font-bold text-2xl uppercase">Ministério do Comércio e Indústria</div>
+            @if (certificadoData.pedidoLicencaAtividade.aplicante.categoria === 'COMERCIAL') {
+            <div class="font-semibold text-xl">Direção-Geral do Comércio</div>
+            } @else {
+            <div class="font-semibold text-xl">Direção-Geral da Indústria</div>
+            }
+        </div>
+        <div class="flex justify-center">
+            <div class="text-center my-4">
+                <div class="mt-4 font-extrabold text-5xl text-sky-600 tracking-wide">ALVARÁ DE LICENÇA</div>
+                <div class="text-3xl font-semibold text-sky-600">
+                    PARA EXERCÍCIO DA ATIVIDADE
+                    {{certificadoData.pedidoLicencaAtividade.aplicante.categoria | titlecase}}
                 </div>
-                <div class="flex items-center bottom-0">
-                    <div class="flex-1 flex justify-center">
-                        <!-- Centered content -->
-                        <div>
-                            <div class="mt-8 mb-2 text-center">O Diretor-Geral do Comércio</div>
-                            <span class="with-image">
-                                <img src="images/stamp.png" alt="Stamp" class="stamp" width="110" height="110" />
-                                <span class="text-label text-gray-600">Donald Trump</span>
-                            </span>
-                        </div>
-                    </div>
-                    <div class="flex justify-end">
-                        <!-- Right-aligned content -->
-                        <img src="images/qrcode.png" alt="Qrcode" class="qrcode" width="110" height="110" />
-                    </div>
+            </div>
+        </div>
+
+        <div class="grid grid-cols-6 text-black px-8 pt-6">
+            <div class="col-span-6 text-xl my-4">
+                N.º <span class="font-bold">{{certificadoData.pedidoLicencaAtividade.aplicante.numero}}</span>
+            </div>
+            <div class="col-span-6 text-xl my-4">
+                Sociedade Comercial <span
+                    class="font-bold">{{certificadoData.pedidoLicencaAtividade.nomeEmpresa}}</span>
+            </div>
+            <div class="col-span-6 text-xl my-4">
+                Nº Registo Comercial <span
+                    class="font-bold">{{certificadoData.pedidoLicencaAtividade.empresaNumeroRegistoComercial}}</span>
+            </div>
+            <div class="col-span-6 text-xl my-4">
+                NIF: <span class="font-bold">{{certificadoData.pedidoLicencaAtividade.empresaNif}}</span>
+            </div>
+            <div class="col-span-6 text-xl my-4">
+                Sede em: <span class="font-bold">
+                    {{certificadoData.sede.local}},
+                    {{certificadoData.sede.aldeia.nome}},
+                    {{certificadoData.sede.aldeia.suco.nome}},
+                    {{certificadoData.sede.aldeia.suco.postoAdministrativo.nome}},
+                    {{certificadoData.sede.aldeia.suco.postoAdministrativo.municipio.nome}}
+                </span>
+            </div>
+            <div class="col-span-6 text-xl my-4">
+                Nível de risco: <span class="font-bold">{{certificadoData.pedidoLicencaAtividade.risco}}</span>
+            </div>
+            <div class="col-span-3 text-xl my-4">
+                Atividade comercial declarada <span
+                    class="font-bold">{{certificadoData.pedidoLicencaAtividade.classeAtividade.descricao}}</span>
+            </div>
+            <div class="col-span-3 text-xl my-4">
+                Código: <span class="font-bold">{{certificadoData.pedidoLicencaAtividade.classeAtividade.codigo}}</span>
+            </div>
+            <div class="col-span-6 text-xl my-4">
+                Data de Emissão: <span class="font-bold">{{certificadoData.dataEmissao| date:'longDate'}}</span>
+            </div>
+            <div class="col-span-6 text-xl my-4">
+                Validade até <span class="font-bold">{{certificadoData.dataValidade| date:'longDate'}}</span>
+            </div>
+        </div>
+
+        <div class="grid grid-cols-4 mt-16">
+            <div class="col-span-3 flex items-center justify-center text-center">
+                <div class="mb-2 text-black">
+                    <p>O Diretor-Geral do Comércio</p>
+                    <br>
+                    <p class="text-gray-600">Donald Trump</p>
                 </div>
+            </div>
+            <div class="col-span-1">
+                <img src="images/qrcode.png" alt="Qrcode" class="qrcode" width="110" height="110" />
             </div>
         </div>
     </div>
