--- a/src/app/pages/application-management/application-atividade-detail/pdf/pedido-vistoria-pdf/pedido-vistoria-pdf.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/pdf/pedido-vistoria-pdf/pedido-vistoria-pdf.component.html
@@ -41,7 +41,7 @@
             <div class="flex gap-6 flex-wrap">
                 <span
                     class="inline-flex items-center px-2 py-1 rounded border border-gray-300 bg-gray-100 text-black text-value">
-                    ✓ {{ this.pedido.tipoVistoria }}
+                    ✓ {{ this.tipoVistoria }}
                 </span>
             </div>
         </div>
@@ -98,7 +98,7 @@
 
             <div class="mb-2 flex gap-2">
                 <span class="w-1/4 text-label text-gray-600">Identificação do administrador/gerente:</span>
-                <span class="flex-1 text-value text-black">{{aplicanteData.empresa.gerente}}</span>
+                <span class="flex-1 text-value text-black">{{aplicanteData.empresa.gerente.nome}}</span>
             </div>
         </div>
 
@@ -219,7 +219,7 @@
         </div>
 
         <!-- Footer -->
-        <div class="my-8 flex flex-col items-center gap-4">
+        <div class="my-8 flex flex-col items-center gap-4 pb-6">
             <div>
                 <span class="text-label text-gray-600">Data:</span>
                 <span class="w-12 inline-block border-b border-gray-300 text-center text-value text-black">
@@ -234,13 +234,6 @@
                     {{aplicanteData.updatedAt | date:'yyyy'}}
                 </span>
             </div>
-            <span class="text-label text-gray-600">Assinatura</span>
-            <span class="with-image">
-                <img src="images/stamp.png" alt="Stamp" class="stamp" width="110" height="110" />
-                <span class="text-label text-gray-600">Donald Trump</span>
-            </span>
-            <div class="flex-1"></div>
-            <span class="w-72 inline-block border-b border-black text-center text-value text-black"></span>
         </div>
     </div>
 </div>
