--- a/src/app/pages/application-management/application-atividade-detail/pedido-atividade-form/pedido-atividade-form.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/pedido-atividade-form/pedido-atividade-form.component.html
@@ -518,7 +518,7 @@
 
              </ul>
              <p-fileupload name="files" method="post" (onUpload)="onUploadDocs($event)" [maxFileSize]="maxFileSize"
-                 [multiple]="true" accept="application/pdf" mode="advanced" [url]="uploadURLDocs()"
+                 [multiple]="true" accept="application/pdf" mode="advanced" [url]="uploadURLDocs()" [fileLimit]=""
                  [disabled]="disabledForm">
                  <ng-template #empty>
                      @if (uploadedDocs.length === 0) {
@@ -550,7 +550,7 @@
              </p-fileupload>
          </div>
      </div>
-     <p-button [disabled]="!requestForm.valid" (click)="isNew? save(requestForm): update(requestForm)"
+     <p-button [disabled]="disabledSubmitButton()" (click)="isNew? save(requestForm): update(requestForm)"
          [loading]="isLoading" [label]="isNew? 'Guardar' : 'Actualizar'" severity="success"
          [icon]="isNew? 'pi pi-save' : 'pi pi-sync'" />
  </form>
