--- a/src/app/pages/application-management/summary/summary.component.html
+++ b/src/app/pages/application-management/summary/summary.component.html
@@ -95,7 +95,7 @@
             <textarea [formControl]="notes" inputId="notes" rows="5" cols="30" pTextarea fluid></textarea>
         </div>
         <p-button [disabled]="!selectedFuncionario.valid" (click)="atribuir()" icon="pi pi-check-circle"
-            label="Atribuir o Aplicante" [raised]="true" severity="success" />
+            label="Atribuir" [raised]="true" severity="success" />
     </div>
 
     }
@@ -185,12 +185,20 @@
                     </div>
                 </div>
                 <div class="flex items-center space-x-4">
-                    @if (aplicanteData.estado === 'REVISTO' || aplicanteData.estado === 'APROVADO')
-                    {
+                    @switch (aplicanteData.estado) {
+                    @case ('REVISTO') {
+                    <p-tag [value]="'REVISTO'" [severity]="'SUBMETIDO'" />
+
+                    }
+                    @case ('APROVADO') {
                     <p-tag [value]="'REVISTO'" [severity]="'SUBMETIDO'" />
                     }
-                    @else {
-                    <p-tag value="Em curso" [severity]="'info'" icon="pi pi-clock" />
+                    @case ('SUBMETIDO') {
+                    <p-tag [value]="'EM CURSO'" [severity]="'info'" icon="pi pi-clock" />
+                    }
+                    @case ('EM_CURSO') {
+                    <p-tag value="PENDENTE" [severity]="'warn'" icon="pi pi-ban" />
+                    }
                     }
                 </div>
             </div>
