--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -15,7 +15,7 @@
 
 
      <div class="w-full px-8">
-         <p-stepper [value]="1" class="basis-[50rem]" [linear]="true">
+         <p-stepper [value]="1" class="basis-[50rem]" [linear]="false">
              <p-step-list>
                  <p-step [value]="1">Empresa</p-step>
                  <p-step [value]="2">Proprietário(a) / Titular da empresa</p-step>
@@ -500,9 +500,18 @@
                                          placeholder="Selecione o tipo de Representante">
                                      </p-select>
                                  </div>
+                                 @if (empresaForm.get('representante.tipo')?.value === 'Empresa') {
+                                 <div class="mb-6 col-span-12">
+                                     <label for="nomeEmpresa" class="font-medium  mb-2 block">
+                                         Nome da Emresa
+                                     </label>
+                                     <input formControlName="nomeEmpresa" id="nomeEmpresa" type="text" pInputText fluid
+                                         placeholder="Ex. Empresa Unip. lda" />
+                                 </div>
+                                 }
                                  <div class="mb-6 col-span-12">
                                      <label for="nome" class="font-medium  mb-2 block">
-                                         Nome
+                                         Nome do funcionário
                                      </label>
                                      <input formControlName="nome" id="nome" type="text" pInputText fluid
                                          placeholder="Ex: Joao da Silva" />
